nav arreglado sin logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
+	<header>
+	<div class="grid grid-pad">
+		<div class="col-1-1">
+			<div class="content">
+				<ul class="menu-header">
+					<li><a href="#">BUNNYS</a></li>
+					<li><a href="#">CUTE PHOTOS</a></li>
+					<li><a href="#">RABBIT FASHION</a></li>
+					<li><a href="#">NEWS BUNNY'S</a></li>
+					<li><a href="#">FEATURES</a></li>
+				</ul>
+		</div>
+	</div>
+	</header>
 	
 </body>
 </html>
