--- a/index.html
+++ b/index.html
@@ -4,26 +4,37 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Prompt" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/simplegrid.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/media.css">
 </head>
 <body>
+<!--Header con logo y nav bar-->
 	<header>
-	<div class="grid grid-pad">
-		<div class="col-1-1">
-			<div class="content">
-				<ul class="menu-header">
-					<li><a href="#">BUNNYS</a></li>
-					<li><a href="#">CUTE PHOTOS</a></li>
-					<li><a href="#">RABBIT FASHION</a></li>
-					<li><a href="#">NEWS BUNNY'S</a></li>
-					<li><a href="#">FEATURES</a></li>
-				</ul>
+		<div class="grid grid-pad">
+			<div class="col-1-1">
+				<div class="content">
+					<ul class="menu-header">
+						<li><a href="#">BUNNYS</a></li>
+						<li><a href="#">CUTE PHOTOS</a></li>
+						<li><a href="#">RABBIT FASHION</a></li>
+						<li><a href="#">NEWS BUNNY'S</a></li>
+						<li><a href="#">FEATURES</a></li>
+					</ul>
+					<div class="col-1-4 push-1-9">
+					<div id="bunny-logo">
+						<h1>Bunny's</h1>
+					</div>
+					<div id="love-logo">
+						<h1>LOVE</h1>
+					</div>
+					</div>
+				</div>
+			</div>
 		</div>
-	</div>
 	</header>
-	
+
 </body>
 </html>
