--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
 			</div>
 		</div>
 	</header>
-
+	<!--Footer-->
+	<footer>
+		<div class="grid grid-pad">
+			<div class="col-1-1">
+				<div class="content">
+					<div class="bye">
+						<p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Dani Sánchez</p>
+					</div>	
+				</div>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
