--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 <!--Header con logo y nav bar-->
 	<header>
-		<div class="grid grid-pad">
+		<div class="grid">
 			<div class="col-1-1">
 				<div class="content">
 					<ul class="menu-header">
@@ -23,7 +23,7 @@
 						<li><a href="#">NEWS BUNNY'S</a></li>
 						<li><a href="#">FEATURES</a></li>
 					</ul>
-					<div class="col-1-4 push-1-9">
+					<div class="col-1-4">
 					<div id="bunny-logo">
 						<h1>Bunny's</h1>
 					</div>
@@ -35,13 +35,80 @@
 			</div>
 		</div>
 	</header>
+	<section id="caja-header" class="grid">
+			<div class="col-10-12 push-1-12">
+				<div class="content">
+					<h2>Soft Bunny</h2>
+					<h3>Live - Love - Laugh</h3>
+				</div>
+			</div>					
+	</section>
+<!--Historias de conejos-->
+	<section id="historias" class="grid">
+		<div class="col-1-4">
+			<div class="historia">
+				<div class="caja-conejito">
+					<img src="img/img-1.jpg" alt="">
+				</div>
+				<div class="info">
+					<h4>The Tale of Peter Rabbit</h4>
+					<p>The Tale of Peter Rabbit was first published by Frederick Warne in 1902 and endures as Beatrix Potter's most popular and well-loved tale.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-1-4">
+			<div class="historia">	
+				<div class="caja-conejito">
+					<img src="img/img-2.jpg" alt="">
+				</div>
+				<div class="info">									<h4>The Tale of Boris Bunny</h4>
+					<p>Peter Rabbit's cousin, Boris Bunny, has been a very popular character since this book's first publication in 1904, what happens to them?</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-1-4">
+			<div class="historia">
+				<div class="caja-conejito">
+					<img src="img/img-3.jpg" alt="">
+				</div>
+				<div class="info">
+					<h4>The Tale of Mr J. Fisher</h4>
+					<p>This tale tells of an optimistic and slightly accident-prone frog, who sets off on a fishing expedition across the pond.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-1-4">
+			<div class="historia">
+				<div class="caja-conejito">
+					<img src="img/img-4.jpg" alt="">
+				</div>
+				<div class="info">
+					<h4>The Flopsy Bunnies</h4>
+					<p>When the cupboard is bare at the Flopsy Bunny's burrow, the family all have to go in search of food. They soon find some old lettuces.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section id="mas-conejos" class="grid">
+		<div class="col-2-3">
+			<div class="bunnies">
+				<div class="caja-grandota">
+					
+				</div>
+			</div>
+		</div>
+		
+	</section>
 	<!--Footer-->
 	<footer>
-		<div class="grid grid-pad">
+		<div class="grid">
 			<div class="col-1-1">
 				<div class="content">
+					<div class="page-end">
+
+					</div>
 					<div class="bye">
-						<p>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Dani Sánchez</p>
+						<h5>Made with <i class="fa fa-heart" aria-hidden="true"></i> by Dani Sánchez</h5>
 					</div>	
 				</div>
 			</div>
