se enviara terminado luego

--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 		<div class="col-2-3">
 			<div class="bunnies">
 				<div class="caja-grandota">
+				<div class="texto"></div>
 					
 				</div>
 			</div>
 		</div>
-		
 	</section>
 	<!--Footer-->
 	<footer>
